--- a/package.json
+++ b/package.json
@@ -14,16 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.25.0",
     "canvas-datagrid": "^0.4.2",
     "element-ui": "^2.15.6",
     "jquery": "^3.6.0",
+    "luckyexcel": "^1.0.1",
     "qs": "^6.10.3",
     "vue": "^2.5.2",
-    "vue-excelview": "^1.0.7",
-    "vue-preview": "^1.1.3",
-    "vue-router": "^3.0.1",
-    "xlsx": "^0.17.5"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
