--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 .DS_Store
 node_modules/
-/dist/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
 selenium-debug.log
+/dist/
 
 # Editor directories and files
 .idea
@@ -15,3 +15,8 @@ selenium-debug.log
 *.ntvs*
 *.njsproj
 *.sln
+files/
+good_case/
+bad_case/
+__pycache__/
+*.pyc
